--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,16 +3,17 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="footer-manu">
-            <p>43rd International ACM SIGIR Conference on Research and Development in Information Retrieval. <b>July 26-30, 2020 (Xi'an, China)</b></p>
-          <!-- <ul>
+        <p>43<sup>rd</sup> International ACM SIGIR Conference on Research and Development in Information Retrieval. <b>July 26-30, 2020 (Xi'an, China)</b></p>
+
+        <!-- <div class="footer-manu"> -->
+                      <!-- <ul>
             <li><a href="#">About Us</a></li>
             <li><a href="{{ site.baseurl }}/contact">Contact us</a></li>
             <li><a href="#">How it works</a></li>
             <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
             <li><a href="#">Terms</a></li>
           </ul> -->
-        </div>
+        <!-- </div> -->
         <p>2019 &copy;  All rights reserved.</p>
       </div>
     </div>
