--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <p>43<sup>rd</sup> International ACM SIGIR Conference on Research and Development in Information Retrieval. <b>July 25-30, 2020 (Xi'an, China)</b></p>
+        <div>43<sup>rd</sup> International ACM SIGIR Conference on Research and Development in Information Retrieval </br> <b>July 25-30, 2020 (Xi'an, China)</b></div>
 
         <!-- <div class="footer-manu"> -->
                       <!-- <ul>
@@ -14,7 +14,7 @@
             <li><a href="#">Terms</a></li>
           </ul> -->
         <!-- </div> -->
-        <p>2019 &copy;  All rights reserved.</p>
+        <div>2019 &copy;  All rights reserved.</div>
       </div>
     </div>
   </div>
