--- a/css/airspace.css
+++ b/css/airspace.css
@@ -52,6 +52,7 @@ a:active {
   margin-bottom: 70px;
 }
 .section-title h2 {
+  font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
   font-size: 28px;
   font-weight: 600;
