--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
  .list {
    list-style: circle;
    list-style-position: inside;
+   /* font-family: 'Volkhov', serif; */
+   /* font-style: italic; */
+   color: #666;
  }
 
  .italic {
@@ -36,4 +39,41 @@
 
 .post-area a:hover {
   color: #0D0017;
+}
+
+.cardWrapper{
+   overflow: auto;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 200px;
+  margin: 10px;
+  text-align: center;
+  font-family: arial;
+  padding: 10px;
+  /* float: auto; */
+  display: inline-block;
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
 }
