--- a/css/style.css
+++ b/css/style.css
@@ -77,3 +77,24 @@ button {
 button:hover, a:hover {
   opacity: 0.7;
 }
+
+.person-card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  float: left;
+  width: 200px;
+  list-style: none;
+  margin: 10px;
+  padding: 10px;
+  height: 250px;
+}
+
+.person-card img {
+  height: 150px;
+  /* border-radius: 15px;
+  display: block; */
+  width: 100%;
+}
+
+#organizers h4 {
+  clear: both;
+}
