--- a/_includes/organizers.html
+++ b/_includes/organizers.html
@@ -17,7 +17,7 @@
                 <div>
                     <a href="http://www.bigdatalab.ac.cn/~cxq/">
                         <img src="img/organizers/Xueqi_Cheng.jpg" />Xueqi Cheng</a><br />
-                    Chinese Academy of Science, China
+                    Chinese Academy of Sciences, China
                 </div>
             </li>
 
@@ -48,7 +48,7 @@
                 <div>
                     <a href="https://www.uva.nl/profiel/k/a/j.kamps/j.kamps.html">
                         <img src="img/organizers/Jaap.jpg" />Jaap Kamps</a><br />
-                    University of Amsterdam, Holland
+                    University of Amsterdam, Netherlands
                 </div>
             </li>
             <li class="person-card">
@@ -73,7 +73,7 @@
                 <div>
                     <a href="http://www.bigdatalab.ac.cn/~gjf/">
                         <img src="img/organizers/jiafeng.jpg" />Jiafeng Guo</a><br />
-                    Chinese Academy of Science, China
+                    Chinese Academy of Sciences, China
                 </div>
             </li>
             <li class="person-card">
@@ -150,7 +150,7 @@
                 <div>
                     <a href="http://infosense.cs.georgetown.edu/grace/">
                         <img src="img/organizers/grace.jpeg" />Grace Hui Yang</a><br />
-                    Georgetown University
+                    Georgetown University, U.S.A
                 </div>
             </li>
         </ul>
@@ -177,7 +177,7 @@
         <ul>
             <li class="person-card">
                 <div>
-                    <a href="https://www.irit.fr/-Publications-?code=496&nom=Boughanem+Mohand&lang=fr">
+                    <a href="https://www.irit.fr/~Mohand.Boughanem/index_en.php">
                         <img src="img/organizers/mohand.jpeg" />Mohand Boughanem</a><br />
                     IRIT, Toulouse, France
                 </div>
@@ -221,8 +221,8 @@
             </li>
             <li class="person-card">
                 <div>
-                    <a href="https://www.egr.msu.edu/people/profile/tangjili">
-                        <img src="img/organizers/tang_jiliang.jpg" />Jiliang Tan</a><br />
+                    <a href="https://www.cse.msu.edu/~tangjili/">
+                        <img src="img/organizers/tang_jiliang.jpg" />Jiliang Tang</a><br />
                     Michigan State University, U.S.A.
                 </div>
             </li>
@@ -240,8 +240,8 @@
             <li class="person-card">
                 <div>
                     <a
-                        href="https://www.wlu.ca/programs/business-and-economics/graduate/management-phd/faculty-and-staff/index.html">
-                        <img src="img/organizers/na.png" />Jessie Zhao</a><br />
+                        href="https://www.wlu.ca/academics/faculties/faculty-of-science/faculty-profiles/jiashu-zhao/index.html">
+                        <img src="img/organizers/jessie_zhao.jpeg" />Jiashu (Jessie) Zhao</a><br />
                     Wilfrid Laurier University, Waterloo, Canada
                 </div>
             </li>
@@ -287,7 +287,7 @@
             </li>
             <li class="person-card">
                 <div>
-                    <a href="https://datascience.jd.com/page/DaweiYin.html">
+                    <a href="http://www.yindawei.com/">
                         <img src="img/organizers/yindawei.jpg" />Dawei Yin</a><br />
                     JD.com, China
                 </div>
@@ -347,15 +347,14 @@
         <ul>
             <li class="person-card">
                 <div>
-                    <a href="https://www.linkedin.com/in/sadra-abrishamkar-09609142/?originalSubdomain=ca"
-                        target="_blank">
+                    <a href="https://www.linkedin.com/in/sadra-abrishamkar-09609142/?originalSubdomain=ca">
                         <img src="img/organizers/sadra.jpeg" />Sadra Abrishamkar</a><br />
                     York University, Canada
                 </div>
             </li>
             <li class="person-card">
                 <div>
-                    <a href="http://www-scf.usc.edu/~yaguang/" target="_blank">
+                    <a href="https://sites.google.com/site/maojiaxin/">
                         <img src="img/organizers/mao.jpg" />Jiaxin Mao</a><br />
                     Tsinghua University, China
                 </div>
