--- a/css/airspace.css
+++ b/css/airspace.css
@@ -67,7 +67,7 @@ a:active {
 --*/
 header {
   background: #fff;
-  padding: 20px 0;
+  /* padding: 20px 0; */
 }
 header .navbar {
   margin-bottom: 0px;
@@ -139,7 +139,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	wrapper Start
 --*/
 #intro {
-  padding: 100px 0;
+  padding: 20px 0;
 }
 #intro .block h2 {
   padding-top: 35px;
