--- a/css/style_v1.css
+++ b/css/style_v1.css
@@ -98,3 +98,27 @@ button:hover, a:hover {
 #organizers h4 {
   clear: both;
 }
+
+#logo {
+  position: relative;
+}
+#logo img {
+  position: absolute;
+  top: -100px;
+  left: 0px;
+  width: 150px;
+  height: auto;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+
+  #logo img {
+    /* position: absolute; */
+    top: -70px;
+    /* left: 0px; */
+    width: 100px;
+    height: auto;
+
+  }
+}
