--- a/_includes/organizers.html
+++ b/_includes/organizers.html
@@ -71,18 +71,19 @@
         <ul>
             <li class="person-card">
                 <div>
-                    <a href="http://www.bigdatalab.ac.cn/~gjf/">
-                        <img src="img/organizers/jiafeng.jpg" />Jiafeng Guo</a><br />
-                    Chinese Academy of Sciences, China
-                </div>
-            </li>
-            <li class="person-card">
-                <div>
                     <a href="http://abdiganidiriye.com/">
                         <img src="img/organizers/abdigani.jpeg" />Abdigani Diriye</a><br />
                     Amazon, U.K.
                 </div>
             </li>
+            <li class="person-card">
+                <div>
+                    <a href="http://www.bigdatalab.ac.cn/~gjf/">
+                        <img src="img/organizers/jiafeng.jpg" />Jiafeng Guo</a><br />
+                    Chinese Academy of Sciences, China
+                </div>
+            </li>
+
             <li class="person-card">
                 <div>
                     <a href="https://iew3.technion.ac.il/~kurland/">
@@ -111,7 +112,7 @@
         </ul>
 
 
-        <h4>10-year Best Paper Chair</h4>
+        <h4>Test of Time Award Chairs</h4>
         <ul>
             <li class="person-card">
                 <div>
@@ -366,7 +367,7 @@
             <li class="person-card">
                 <div>
                     <a href="https://www.researchgate.net/profile/Zehua_Chen" target="_blank">
-                        <img src="img/organizers/na.png" />Zehua Chen</a><br />
+                        <img src="img/organizers/Zehua_Chen.jpg" />Zehua Chen</a><br />
                     Taiyuan University of Tech., China
                 </div>
             </li>
